feat: added GitHub fork ribbon

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ORCiD Email Lookup</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
+    <style>.github-fork-ribbon:before { background-color: #13b243; }</style>
 </head>
 <body class="bg-light">
+    <a class="github-fork-ribbon" href="https://github.com/jlumbroso/orcid-lookup/" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
     <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
