feat: added language and link to `orcid-login-demo`

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <h1 class="mb-4 text-center">ORCiD Email Lookup</h1>
+                <span>Is your email public? This is broadly useful, but <a href="https://support.orcid.org/hc/en-us/articles/360006897614-Visibility-settings#3-default-visibility-settings-on-registration">by default ORCiD makes your email private</a>, so double-check by <a href="https://jlumbroso.github.io/orcid-login-demo/">logging in here</a>...</span>
                 <textarea id="inputText" class="form-control mb-3" rows="5" placeholder="Paste text with ORCiDs here..."></textarea>
                 <button onclick="extractEmails()" class="btn btn-success w-100 mb-2">Extract Emails</button>
                 <button onclick="copyEmails()" class="btn btn-primary w-100 mb-2">Copy Emails</button>
